--- a/discretion_mapping_2.html
+++ b/discretion_mapping_2.html
@@ -35,6 +35,11 @@ class: center
 * A new committee made of CORE and non-CORE members.
 
 * 12 - 18 month long project deconstructing and analzying case management and supervision policy, practices, and programs through an equity lens.
+
+
+---
+# The Ask: Diagram
+.center[![:scale 85%](img/Diagram of Discretion.jpg)]
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
