--- a/discretion_mapping_2.html
+++ b/discretion_mapping_2.html
@@ -16,7 +16,7 @@ class: center
 
 # Discretion Mapping: Phase 2
 .center[![](img/core_logo.png)]
-.bottom[.right[Tuesday, March 12, 2019]]
+.bottom[.right[Thursday, March 14, 2019]]
 
 ---
 # Discretion Mapping: Recap
@@ -43,16 +43,21 @@ class: center
  
 ---
 # Case Management: Conceptualized
+.pull-left[
 
-.pull-left[![](img/Diagram of Discretion.jpg)]
-.pull-right[
-
-* Each box represents a process
+![](img/Diagram of Discretion.png)]
+.pull-right[* Each box represents a process
 
 * Center diamond represents choices and decisions to be made
 
 * Case planning box requires additional scrutiny due to new policies, procedurs, and assessments
 ]
+
+---
+### Case Management/Supervision Diagram
+
+.center[.middle[![:scale 95%](img/Diagram of Discretion.jpg)]]
+
 
 ---
 # Focus: Case Management
@@ -125,7 +130,38 @@ class: center
       * Analyze
       * Transform data
       * Easily communicate findings]
+      
 ---
+# Methods: Radical Transparency
+
+*In order to cut through the noise of other projects, initiatives, and roll-outs, this team will have to be clear, constent, and consistent in communicating our data, methods, successes and failures with the department.* 
+  
+
+
+???
+can go to 55% easily
+
+---
+# Methods: Communication Tools
+.pull-left[
+* A detailed communication plan
+
+* Technology:
+  * [Slack](https://slack.com)
+  * [Amazon Web Services](https://aws.amazon.com/rds/postgresql/)
+  * [Github/Github pages](https://github.com)
+  
+* [Newsletter](https://mailchimp.com)
+
+* Data Walks
+
+* Regular, open meetings
+]
+
+.pull-right[
+&lt;/br&gt;
+&lt;/br&gt;
+![](img/communication.gif)]
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
