first draft 1 complete

--- a/discretion_mapping_2.html
+++ b/discretion_mapping_2.html
@@ -11,12 +11,14 @@
     <textarea id="source">
 
 
-class: title-slide
-class: center
+# Discretion Mapping: Phase 2 
 
-# Discretion Mapping: Phase 2
-.center[![](img/core_logo.png)]
-.bottom[.right[Thursday, March 14, 2019]]
+
+#### *Deconstructing and Analyzing Case Management and Supervision in the Cook County Juvenile Probation System* 
+
+.center[![:scale 50%](img/core_logo.png)]
+
+.bottom[.right[Friday, March 15, 2019]]
 
 ---
 # Discretion Mapping: Recap
@@ -37,7 +39,7 @@ class: center
 
 * A new committee made of CORE and non-CORE members.
 * 12 - 18 month long project 
-* Deconstructing and analzying
+* Deconstructing and analyzing
   * Case management and supervision 
   * Policy, practices, and programs through an equity lens
  
@@ -50,7 +52,7 @@ class: center
 
 * Center diamond represents choices and decisions to be made
 
-* Case planning box requires additional scrutiny due to new policies, procedurs, and assessments
+* Case planning box requires additional scrutiny due to new policies, procedures, and assessments
 ]
 
 ---
@@ -85,7 +87,7 @@ class: center
 
 * **Method:** How we will complete the process
 
-* **Timeline:** Deliverables, milestones and tangible steps forward
+* **Timeline:** Deliverable, milestones and tangible steps forward
 
 ---
 # Resources
@@ -95,7 +97,7 @@ class: center
       *  Mix of support, specialized, field, management
       *  Commit to this project for up to 18 months
   * Recognition of the work by their section/deputy/supervisor
-     * ie: Give them leeway to get this work done]
+     * i.e.: Give them leeway to get this work done]
 .pull-right[
 * **Data**
   * Socials
@@ -134,34 +136,37 @@ class: center
 ---
 # Methods: Radical Transparency
 
-*In order to cut through the noise of other projects, initiatives, and roll-outs, this team will have to be clear, constent, and consistent in communicating our data, methods, successes and failures with the department.* 
-  
+*In order to cut through the noise of other projects, initiatives, and roll-outs, this team will have to be clear, constant, and consistent in communicating our data, methods, successes and failures with the department.* 
 
-
-???
-can go to 55% easily
+.center[![](img/communication.gif)]
 
 ---
-# Methods: Communication Tools
-.pull-left[
-* A detailed communication plan
+### Methods: Communication Tools
+* A detailed communication plan, including:
+  * Technology:
+      * [Slack](https://slack.com)
+         * For meetings and records
+      * [Amazon Web Services](https://aws.amazon.com/rds/postgresql/)
+          * Our open, anonymous database
+      * [Github/Github pages](https://github.com)
+         * Our webpage and code storage
+    * [Newsletters](https://mailchimp.com) 
+        * Emailing our updates monthly
+  * Data Walks
+     * Showing what we have done
+  * Regular meetings
+    * [Agile](https://martinfowler.com/articles/itsNotJustStandingUp.html) informed
+      * Open 
+      * Document what we have done and how we have done it
+      
+---
+# Join the Discretion Mapping Team
+* Support CORE
+* Join the team
+* Ensure our discretion makes a difference
 
-* Technology:
-  * [Slack](https://slack.com)
-  * [Amazon Web Services](https://aws.amazon.com/rds/postgresql/)
-  * [Github/Github pages](https://github.com)
-  
-* [Newsletter](https://mailchimp.com)
 
-* Data Walks
-
-* Regular, open meetings
-]
-
-.pull-right[
-&lt;/br&gt;
-&lt;/br&gt;
-![](img/communication.gif)]
+.center[![](img/team_awesome.gif)]
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
