--- a/discretion_mapping_2.html
+++ b/discretion_mapping_2.html
@@ -13,12 +13,11 @@
 
 # Discretion Mapping: Phase 2 
 
-
 #### *Deconstructing and Analyzing Case Management and Supervision in the Cook County Juvenile Probation System* 
 
 .center[![:scale 50%](img/core_logo.png)]
 
-.bottom[.right[Friday, March 15, 2019]]
+.bottom[.right[Sunday, March 17, 2019]]
 
 ---
 # Discretion Mapping: Recap
@@ -60,7 +59,6 @@
 
 .center[.middle[![:scale 95%](img/Diagram of Discretion.jpg)]]
 
-
 ---
 # Focus: Case Management
 .pull-left[
@@ -76,7 +74,6 @@
 * Data rich
 ]
 .pull-right[![](img/case_management.jpg)]
-
 
 ---
 # Project Basics
@@ -111,11 +108,10 @@
   * Meetings
   * Communication]
   
-  
 ---
 # Methods
 .pull-left[
-* Create the map:
+* **Create the map:**
   * Deconstruct each "box"
       * Map each step to determine:
           * What we can measure
@@ -124,7 +120,7 @@
               * Data we want
           * Policies and procedures for each step]
 
-.pull-right[* Document the map
+.pull-right[* **Document the map:**
   * In a [real database](https://aws.amazon.com/rds/postgresql/)
   * Anonymize PO and Client Data
   * Will allow for multiple users to:
@@ -164,7 +160,6 @@
 * Support CORE
 * Join the team
 * Ensure our discretion makes a difference
-
 
 .center[![](img/team_awesome.gif)]
     </textarea>
