timeline slide added. need to finish communication tools breakdown.

--- a/discretion_mapping_2.html
+++ b/discretion_mapping_2.html
@@ -30,14 +30,14 @@
      *  Trial
      *  Case-management/Supervision
 
-* An extremely conservative estimate indicated 45 discretion points through the system
+* A conservative estimate indicated 45 discretion points through the system
   
 ---
 # Next Steps
 .center[![](img/discretion_mapping.gif)]
 
 * A new committee made of CORE and non-CORE members.
-* 12 - 18 month long project 
+* 12 - 18 month project 
 * Deconstructing and analyzing
   * Case management and supervision 
   * Policy, practices, and programs through an equity lens
@@ -90,7 +90,7 @@
 # Resources
 .pull-left[
 * **Staff**
-  * A Team of 8
+  * Team of 8
       *  Mix of support, specialized, field, management
       *  Commit to this project for up to 18 months
   * Recognition of the work by their section/deputy/supervisor
@@ -111,19 +111,17 @@
 ---
 # Methods
 .pull-left[
-* **Create the map:**
-  * Deconstruct each "box"
-      * Map each step to determine:
-          * What we can measure
-              * Factors in each step
-              * Data we have
-              * Data we want
-          * Policies and procedures for each step]
+* **Deconstruct each process box**
+  * Collect what we can measure
+     * Factors in each step  
+     * Data we have
+     * Data we want
+  * Policies and procedures for each step]
 
 .pull-right[* **Document the map:**
   * In a [real database](https://aws.amazon.com/rds/postgresql/)
   * Anonymize PO and Client Data
-  * Will allow for multiple users to:
+  * Will allow for multiple users to **D.A.T.E**:
       * Document
       * Analyze
       * Transform data
@@ -155,6 +153,18 @@
       * Open 
       * Document what we have done and how we have done it
       
+---
+# Timeline
+
+.center[![:scale 35%](img/timeframe.gif)]
+* First deliverables
+  * Communication plan
+  * Work breakdown
+     * An estimate length of each collection/analysis phase
+* Major deliverables every 3 months
+* Monthly newsletter
+* Bi-Weekly Check in meetings
+
 ---
 # Join the Discretion Mapping Team
 * Support CORE
