--- a/discretion_mapping_2.html
+++ b/discretion_mapping_2.html
@@ -17,7 +17,7 @@
 
 .center[![:scale 50%](img/core_logo.png)]
 
-.bottom[.right[Sunday, March 17, 2019]]
+.bottom[.right[Monday, March 18, 2019]]
 
 ---
 # Discretion Mapping: Recap
@@ -30,13 +30,13 @@
      *  Trial
      *  Case-management/Supervision
 
-* A conservative estimate indicated 45 discretion points through the system
+* A conservative estimate indicated 45 discretion points throughout the system
   
 ---
 # Next Steps
 .center[![](img/discretion_mapping.gif)]
 
-* A new committee made of CORE and non-CORE members.
+* A new sub-committee made of CORE and non-CORE members.
 * 12 - 18 month project 
 * Deconstructing and analyzing
   * Case management and supervision 
@@ -62,19 +62,16 @@
 ---
 # Focus: Case Management
 .pull-left[
-* Regarded as the central aspect of field work
-
-* Not the first, or last, step in this section
-
-* Multiple steps
-  *  Some structured, some unstructured
-  
-* Complex
-
+* Regarded as the central aspect of field work&lt;/br&gt; &lt;/br&gt;
+* Not the first, or last, step in this framework&lt;/br&gt; &lt;/br&gt;
 * Data rich
-]
+  * Documents
+  * Outcomes&lt;/br&gt; &lt;/br&gt;
+* The task is to identify:
+  * Data-sources
+  * Discretion Points
+  * Potential outcomes]
 .pull-right[![](img/case_management.jpg)]
-
 ---
 # Project Basics
 
@@ -92,9 +89,8 @@
 * **Staff**
   * Team of 8
       *  Mix of support, specialized, field, management
-      *  Commit to this project for up to 18 months
-  * Recognition of the work by their section/deputy/supervisor
-     * i.e.: Give them leeway to get this work done]
+      *  Commit to this project for up to 18 months&lt;/br&gt; &lt;/br&gt;
+  * Time to complete this work, thanks to MOAT]
 .pull-right[
 * **Data**
   * Socials
@@ -102,12 +98,7 @@
   * Risk Assessments
   * Referrals
   * Case notes
-  * Outcomes  
-* **Space:**
-  * For physical and digital files
-  * Meetings
-  * Communication]
-  
+  * Outcomes]
 ---
 # Methods
 .pull-left[
@@ -115,7 +106,7 @@
   * Collect what we can measure
      * Factors in each step  
      * Data we have
-     * Data we want
+     * Data we want&lt;/br&gt; &lt;/br&gt;
   * Policies and procedures for each step]
 
 .pull-right[* **Document the map:**
@@ -154,14 +145,16 @@
       * Document what we have done and how we have done it
       
 ---
-# Timeline
+### Delivereables and Timeline
 
 .center[![:scale 35%](img/timeframe.gif)]
+--
+
 * First deliverables
   * Communication plan
   * Work breakdown
      * An estimate length of each collection/analysis phase
-* Major deliverables every 3 months
+* Major deliverables every 3 months thereafter
 * Monthly newsletter
 * Bi-Weekly Check in meetings
 
