--- a/discretion_mapping_2.html
+++ b/discretion_mapping_2.html
@@ -17,7 +17,7 @@
 
 .center[![:scale 50%](img/core_logo.png)]
 
-.bottom[.right[Monday, March 18, 2019]]
+.bottom[.right[Tuesday, April 02, 2019]]
 
 ---
 # Discretion Mapping: Recap
@@ -165,6 +165,19 @@
 * Ensure our discretion makes a difference
 
 .center[![](img/team_awesome.gif)]
+
+---
+# Additional Reading/Videos
+
+* [Amazon Web Services](https://aws.amazon.com/free/?sc_channel=PS&amp;sc_campaign=acquisition_US&amp;sc_publisher=google&amp;sc_medium=ACQ-P%7CPS-GO%7CBrand%7CDesktop%7CSU%7CCore%7CCore%7CUS%7CEN%7CText&amp;sc_content=Brand_Core_bmm&amp;sc_detail=%2Bamazon.%20%2Bweb%20%2Bservices&amp;sc_category=Core&amp;sc_segment=293614486518&amp;sc_matchtype=b&amp;sc_country=US&amp;s_kwcid=AL!4422!3!293614486518!b!!g!!%2Bamazon.%20%2Bweb%20%2Bservices&amp;ef_id=Cj0KCQjwpsLkBRDpARIsAKoYI8zTIwZYQShraMo1AcqMmNTu8W-HtylKiQwEpzrYvxjFnLBrPt25-CQaAo0pEALw_wcB:G:s)
+
+* [Mailchimp Newsletter Software](https://mailchimp.com/?gclsrc=aw.ds&amp;ds_rl=1260419&amp;ds_rl=1260446&amp;ds_rl=1260763&amp;ds_rl=1260763&amp;gclid=Cj0KCQjwpsLkBRDpARIsAKoYI8xUF1WkrRgb8j47IIkGoPQpfcJKtSk4fS35ldz_64l092h8AvBPeRQaAvcdEALw_wcB&amp;gclsrc=aw.ds)
+
+* [Agile methods](https://www.youtube.com/watch?v=ZZ_vnqvW4DQ)
+
+* [Git hub](https://www.youtube.com/watch?v=w3jLJU7DT5E)
+
+* [Website based Deliverable] goal(https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice/articles/sexualoffendingvictimisationandthepaththroughthecriminaljusticesystem/2018-12-13)
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
