--- a/rmd/discretion_mapping_2.html
+++ b/rmd/discretion_mapping_2.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta name="author" content="Martin Gleason, MS" />
     <link rel="stylesheet" href="libs/remark-css/default.css" type="text/css" />
-    <link rel="stylesheet" href="core_presentation.css" type="text/css" />
+    <link rel="stylesheet" href="libs/css/core_presentation.css" type="text/css" />
   </head>
   <body>
     <textarea id="source">
