--- a/index.html
+++ b/index.html
@@ -24,18 +24,22 @@
 		</nav>
 	</header>
 	<main> 
-	<div class="text-container-left" id="about">
-		<p>
+	<div class="text-container-left" >
+	<h2 id="about"> CORE</h2>
+	<img  src="img/cc_logo.png" alt="Cook County Logo" class="float-right mr-big-right">
+<p>
 The Committee On Results for Equity (C.O.R.E.) is an advisory committee to the Management Objective and Accountability Team (MOAT), the senior leadership of the <a href="http://www.cookcountycourt.org/ABOUTTHECOURT/JuvenileJusticeChildProtection/JuvenileJustice.aspx">Cook County Juvenile Probation and Court Services Department</a>. The mission of C.O.R.E. is to improve cultural acceptance amongst all staff in order to create equity and justice amongst all clients. This is central to our jurisdiction’s efforts to reduce disparate outcomes for the children engaged by the Cook County Juvenile Probation Department. Though our organization has a distinct reputation and legacy of reducing reliance on secure custody, we have yet to realize fair and equitable outcomes for some of our most marginalized residents of Cook County, Illinois. Therefore, the C.O.R.E. exists to assess and address areas of our operation, with intentional and strategic approaches, that impact outcomes. 
-		</p>
-</div>
+</p>
 
-<div class="text-container-right" id="item2">
+</div>
+<div class="text-container-right" >
+<img src="img/slippymap_system.png" alt="CTA Map" class="float-left mr-big-left">
+<h2 id="item2">Discretion Mapping</h2>
 	<p>
-	Discretion refers to the choices made by the officer when implementing a policy, practice, or referring to a program. Those choices are points. In mapping discretion, C.O.R.E. has a process in which we try to find the discretion points, and place them in relation to each other. 
+Discretion refers to the choices made by the officer when implementing a policy, practice, or referring to a program. Those choices are points. In mapping discretion, C.O.R.E. has a process in which we try to find the discretion points, and place them in relation to each other. 
 	
 For more information on the discretion mapping project, you can find the one page summary <a href="exec_summary.html">here.</a>
-	</p>T
+	</p>
 </div>
 	</main> 
 	<footer>
