updated exec summary with proper font size

--- a/rmd/exec_summary.html
+++ b/rmd/exec_summary.html
@@ -1417,7 +1417,7 @@ text-rendering: optimizelegibility !important;
 ul,ol,dl,p,li{
 color: var(--black);
 font-family: 'Raleway', sans-serif;
-font-size: 1.2rem;
+font-size: 1.2em;
 text-align: left;
 }
 a{
