recommit new file with proper size

--- a/exec_summary.html
+++ b/exec_summary.html
@@ -1414,10 +1414,10 @@ text-align: left;
 font-size: .55em;
 text-rendering: optimizelegibility !important;
 }
-ul,ol,dl,p, li{
+ul,ol,dl,p,li{
 color: var(--black);
 font-family: 'Raleway', sans-serif;
-font-size: 1rem;
+font-size: 1.2em;
 text-align: left;
 }
 a{
@@ -1511,10 +1511,16 @@ border-color: var(--timberwolf);
 .text-container-right {
 float: right;
 padding: 4px 2px 2px 2px;
-margin: 10px 50px 500px 5px;
+margin: 10px 50px 50px 200px;
 border: 0px;
 border-style: solid;
 border-color: var(--timberwolf);
+}
+.mr-big-right {
+margin: 0px 50px 200px 200px;
+}
+.mr-big-left {
+margin: 0px 200px 0px 0px;
 }</style>
 
 
