add clickable svg to index.html

--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@ The Committee On Results for Equity (C.O.R.E.) is an advisory committee to the M
 
 </div>
 <div class="text-container-right" >
-<img src="img/slippymap_system.png" alt="CTA Map" class="float-left mr-big-left">
+<a href="img/CCJC_flowchart.svg">
+<img  src="img/CCJC_flowchart.svg" alt="Discretion Mapping Flow Chart" class="float-left mr-big-left" height="50%" width="50%">
+</a>
 <h2 id="item2">Discretion Mapping</h2>
 	<p>
 Discretion refers to the choices made by the officer when implementing a policy, practice, or referring to a program. Those choices are points. In mapping discretion, C.O.R.E. has a process in which we try to find the discretion points, and place them in relation to each other. 
