update svg for clarity)

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 	</head>
 	<body>
 	<header>
-		<nav class="navbar navbar-expand-lg navbar-light bg-light" style="background-color: var(--whitesmoke);">
+		<nav class="navbar navbar-expand-lg navbar-light bg-light navbar-custom">
 				<ul class="navbar-nav">
-					<li class="nav-item active"> <a class="navbar-brand" href="#about"> <img src="img/core_logo.png" alt="The CORE Logo" class="d-inline-block align-top" width="25%" height="25%">What is Core? </a> </li>
+					<li class="nav-item"> <a class="nav-link" href="#about"> <img src="img/core_logo.png" alt="The CORE Logo" class="d-inline-block align-top" width="25%" height="25%" style="margin: 0 25px 0 0">What is Core? </a> </li>
 					<li class="nav-item"> 
 						<a class="nav-link" href="#item2">What is discretion mapping?</a> 
 					</li>
