--- a/discretion_mapping_2.html
+++ b/discretion_mapping_2.html
@@ -177,11 +177,11 @@ Events:
 * Using a database will force the department to evolve in a more equitable direction
 
 ---
-### Delivereables and Timeline
+### Deliverables and Timeline
 
 .center[![:scale 25%](img/timeframe.gif)]
 
-* First deliverables
+* First deliverable
   * Communication plan
   * Work breakdown
      * An estimate length of each collection/analysis phase
